--- a/generator/templates/echo/partials/imports.hbs
+++ b/generator/templates/echo/partials/imports.hbs
@@ -13,16 +13,16 @@ import (
 	"github.com/gopher-fleece/runtime"
 	RequestAuth "{{{AuthConfig.AuthFileFullPackageName}}}"
 {{#each Controllers}}
-	{{{Name}}}Import "{{{FullyQualifiedPackage}}}"
+	{{{Name}}}Import "{{{PkgPath}}}"
 	{{#each Routes}}
 		{{#each FuncParams}}
-			{{#if TypeMeta.FullyQualifiedPackage}}
-				Param{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{TypeMeta.FullyQualifiedPackage}}}"
+			{{#if TypeMeta.PkgPath}}
+				Param{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{TypeMeta.PkgPath}}}"
 			{{/if}}
 		{{/each}}
 		{{#each Responses}}
-			{{#if FullyQualifiedPackage}}
-				Response{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{FullyQualifiedPackage}}}"
+			{{#if PkgPath}}
+				Response{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{PkgPath}}}"
 			{{/if}}
 		{{/each}}
 	{{/each}}
