Move fixes and imports intermediate optimization

--- a/generator/templates/chi/routes.hbs
+++ b/generator/templates/chi/routes.hbs
@@ -58,7 +58,7 @@ func RegisterRoutes(engine *chi.Mux) {
 				handleAuthorizationError(w, authErr, "{{{OperationId}}}")
 				return
 			}
-			controller := {{{Name}}}Import.{{../Name}}{}
+			controller := {{{Name}}}.{{../Name}}{}
 			controller.InitController(req)
 			{{#ifAnyParamRequiresConversion FuncParams}}
 			var conversionErr error
