--- a/generator/templates/echo/partials/imports.hbs
+++ b/generator/templates/echo/partials/imports.hbs
@@ -12,21 +12,8 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/gopher-fleece/runtime"
 	RequestAuth "{{{AuthConfig.AuthFileFullPackageName}}}"
-{{#each Controllers}}
-	{{{Name}}}Import "{{{PkgPath}}}"
-	{{#each Routes}}
-		{{#each FuncParams}}
-			{{#if TypeMeta.PkgPath}}
-				Param{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{TypeMeta.PkgPath}}}"
-			{{/if}}
-		{{/each}}
-		{{#each Responses}}
-			{{#if PkgPath}}
-				Response{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{PkgPath}}}"
-			{{/if}}
-		{{/each}}
-	{{/each}}
-{{/each}}
+
+{{{UnpackImportsMap Imports}}}
 
 {{> ImportsExtension }}
 
