--- a/generator/templates/mux/partials/imports.hbs
+++ b/generator/templates/mux/partials/imports.hbs
@@ -13,21 +13,7 @@ import (
 	"github.com/gopher-fleece/runtime"
 	RequestAuth "{{{AuthConfig.AuthFileFullPackageName}}}"
 
-{{#each Controllers}}
-	{{{Name}}}Import "{{{PkgPath}}}"
-	{{#each Routes}}
-		{{#each FuncParams}}
-			{{#if TypeMeta.PkgPath}}
-				Param{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{TypeMeta.PkgPath}}}"
-			{{/if}}
-		{{/each}}
-		{{#each Responses}}
-			{{#if PkgPath}}
-				Response{{{UniqueImportSerial}}}{{{UnwrapArrayTypeRecursive Name}}} "{{{PkgPath}}}"
-			{{/if}}
-		{{/each}}
-	{{/each}}
-{{/each}}
+{{{UnpackImportsMap Imports}}}
 
 {{> ImportsExtension }}
 
