--- a/generator/templates/gin/partials/request.switch.param.type.hbs
+++ b/generator/templates/gin/partials/request.switch.param.type.hbs
@@ -9,117 +9,116 @@ if is{{Name}}Exists {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := int({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "int8" TypeMeta.AliasMetadata.AliasType "int8")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 8)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := int8({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "int16" TypeMeta.AliasMetadata.AliasType "int16")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 16)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := int16({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "int32" TypeMeta.AliasMetadata.AliasType "int32")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 32)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := int32({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "int64" TypeMeta.AliasMetadata.AliasType "int64")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 64)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := int64({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "uint" TypeMeta.AliasMetadata.AliasType "uint")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 32)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := uint({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "uint8" TypeMeta.AliasMetadata.AliasType "uint8")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 8)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := uint8({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "uint16" TypeMeta.AliasMetadata.AliasType "uint16")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 16)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := uint16({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "uint32" TypeMeta.AliasMetadata.AliasType "uint32")}}
     {{ToLowerCamel Name}}Uint64, conversionErr := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 32)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := uint32({{ToLowerCamel Name}}Uint64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "uint64" TypeMeta.AliasMetadata.AliasType "uint64")}}
     {{ToLowerCamel Name}}, conversionErr := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 64)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "bool" TypeMeta.AliasMetadata.AliasType "bool")}}
     {{ToLowerCamel Name}}, conversionErr := strconv.ParseBool({{ToLowerCamel Name}}Raw)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "float32" TypeMeta.AliasMetadata.AliasType "float32")}}
     {{ToLowerCamel Name}}Float64, conversionErr := strconv.ParseFloat({{ToLowerCamel Name}}Raw, 32)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
     {{ToLowerCamel Name}} := float32({{ToLowerCamel Name}}Float64)
-    
+
   {{/if}}
-  
+
   {{#if (OrEqual TypeMeta.Name "float64" TypeMeta.AliasMetadata.AliasType "float64")}}
     {{ToLowerCamel Name}}, conversionErr := strconv.ParseFloat({{ToLowerCamel Name}}Raw, 64)
     if conversionErr != nil {
   	{{> ParamsValidationErrorResponse }}
     }
-    
+
   {{/if}}
 
-  {{!-- Case of alias --}}
+  {{!-- Case of Enum with validation enabled --}}
   {{#ifEqual TypeMeta.SymbolKind "Enum"}}
-    {{!-- An experimental feature to validate top-level (only) enums --}}
     {{#if ExperimentalConfig.ValidateTopLevelOnlyEnum}}
       switch {{ToLowerCamel Name}}Raw {
       case {{#each TypeMeta.AliasMetadata.Values}}"{{this}}"{{#unless @last}}, {{/unless}}{{/each}}:
@@ -130,11 +129,19 @@ if is{{Name}}Exists {
         {{> ParamsValidationErrorResponse }}
 		  }
     {{else}}
+      {{!-- Enum without validation --}}
       {{ToLowerCamel Name}}Var := {{SlicePrefix TypeMeta.Name}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{SliceSlice TypeMeta.Name}}({{ToLowerCamel Name}})
       {{ToLowerCamel Name}}RawPtr = &{{ToLowerCamel Name}}Var
     {{/if}}
   {{else}}
-    {{ToLowerCamel Name}}RawPtr = &{{ToLowerCamel Name}}
+    {{!-- Case of Alias --}}
+    {{#ifEqual TypeMeta.SymbolKind "Alias"}}
+      {{ToLowerCamel Name}}Var := {{SlicePrefix TypeMeta.Name}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{SliceSlice TypeMeta.Name}}({{ToLowerCamel Name}})
+      {{ToLowerCamel Name}}RawPtr = &{{ToLowerCamel Name}}Var
+    {{else}}
+      {{!-- Default case for primitive types --}}
+      {{ToLowerCamel Name}}RawPtr = &{{ToLowerCamel Name}}
+    {{/ifEqual}}
   {{/ifEqual}}
 
 }
