Implement Gin arrays in Query

--- a/generator/templates/gin/partials/request.args.parsing.hbs
+++ b/generator/templates/gin/partials/request.args.parsing.hbs
@@ -7,8 +7,8 @@
 {{/equal}}
 
 {{#equal PassedIn "Query"}}
-	var {{ToLowerCamel Name}}RawPtr *{{#if TypeMeta.PkgPath}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{/if}}{{{TypeMeta.Name}}} = nil
-	{{ToLowerCamel Name}}Raw, is{{Name}}Exists := ginCtx.GetQuery("{{{NameInSchema}}}")
+	var {{ToLowerCamel Name}}RawPtr *{{SlicePrefix TypeMeta.Name}}{{#if TypeMeta.PkgPath}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{/if}}{{SliceSlice TypeMeta.Name}} = nil
+    {{ToLowerCamel Name}}Raw{{#if (IsArray TypeMeta.Name)}}Array{{/if}}, is{{Name}}Exists := ginCtx.GetQuery{{#if (IsArray TypeMeta.Name)}}Array{{/if}}("{{{NameInSchema}}}")
 	{{> RequestSwitchParamType}}
 	{{> RunValidator}}
 {{/equal}}
