--- a/generator/templates/echo/partials/request.args.parsing.hbs
+++ b/generator/templates/echo/partials/request.args.parsing.hbs
@@ -8,8 +8,8 @@
 {{/equal}}
 
 {{#equal PassedIn "Query"}}
-	var {{ToLowerCamel Name}}RawPtr *{{#if TypeMeta.PkgPath}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{/if}}{{{TypeMeta.Name}}} = nil
-	{{ToLowerCamel Name}}Raw := echoCtx.QueryParam("{{{NameInSchema}}}")
+    var {{ToLowerCamel Name}}RawPtr *{{SlicePrefix TypeMeta.Name}}{{#if TypeMeta.PkgPath}}Param{{{UniqueImportSerial}}}{{{Name}}}.{{/if}}{{SliceSlice TypeMeta.Name}} = nil
+	{{ToLowerCamel Name}}Raw{{#if (IsArray TypeMeta.Name)}}Array{{/if}} := {{#if (IsArray TypeMeta.Name)}}echoCtx.QueryParams()["{{{NameInSchema}}}"]{{else}}echoCtx.QueryParam("{{{NameInSchema}}}"){{/if}}
 	is{{Name}}Exists := echoCtx.Request().URL.Query().Has("{{{NameInSchema}}}")
 	{{> RequestSwitchParamType}}
 	{{> RunValidator}}
